# auto-chat

./: .gitignore  README.md  extract_readability.js  package-lock.json  prompts.py  pyproject.toml  start_chat.py  tools.yaml
conversations/: 90s_soundtrack_movie_night.json  backyard_movie_night.json  balcony_garden_setup.json  basketball_shoes.json  cameras.yaml  family_movie_night.json  grandkids_movie_night.json  haunted_dinner_menu.json  learning_to_board.yaml  moab_extreme_family_stargazing.json  pickleball_highlight_video.json  san_diego_trip.yaml  skate_vs_bouldering.json  spanish_movie_study_plan.json  warriors_game_plan.json
